--- a/fbw-a32nx/src/localisation/msfs/localazy-locPak-upload-deprecate-config.json
+++ b/fbw-a32nx/src/localisation/msfs/localazy-locPak-upload-deprecate-config.json
@@ -1,4 +1,5 @@
 {
+  "readKey": "a7871633982927335592-326d5a956e5632ceb52d675963a56707d2c98902e1a375fdb7e23cc73dc8cd20",
   "upload": {
     "skipFailedAutodetection": true,
     "deprecate": "project",
