language file updates

--- a/fbw-a32nx/src/localization/flypad/it.json
+++ b/fbw-a32nx/src/localization/flypad/it.json
@@ -156,8 +156,8 @@
       "DeboardConfirmationConfirm": "Sbarca",
       "DeboardConfirmationTitle": "Sbarcare tutti i Passeggeri?",
       "EstimatedDurationUnit": "minuti",
-      "GW": "PL",
-      "GWCG": "CG PL",
+      "GW": "GW",
+      "GWCG": "GW CG",
       "LoadingTime": "Loading Time",
       "Passengers": "Passeggeri",
       "Planned": "Pianificato",
