commonalised climb and descent generators Added number of failures triggering option fix overflow of cards

--- a/fbw-a32nx/src/systems/instruments/src/EFB/Localization/en.json
+++ b/fbw-a32nx/src/systems/instruments/src/EFB/Localization/en.json
@@ -124,9 +124,9 @@
     "Search": "Search",
     "Title": "Failures",
     "Generators": {
-      "Add": "Add",
       "All": "All",
-      "AltitudeAboveSea": "Altitude above sea",
+      "AltitudeAboveSeaMax": "Maximum altitude above sea",
+      "AltitudeAboveSeaMin": "Minimum altitude above sea",
       "Close": "Close",
       "days": "days",
       "DelayAfterArming": "Delay after arming",
@@ -139,11 +139,9 @@
       "feet": "feet",
       "GenTimer": "Timed Failure",
       "GenTakeOff": "Take-Off",
-      "GenAltClimb": "Altitude threshold (climb)",
-      "GenAltDesc": "Altitude threshold (descent)",
+      "GenAlt": "Altitude threshold",
       "GenPerHour": "Chance over time",
-      "GenSpeedAccel": "Speed threshold (acceleration)",
-      "GenSpeedDecel": "Speed threshold (deceleration)",
+      "GenSpeed": "Speed threshold",
       "GroundSpeed": "Ground speed",
       "hour": "hour",
       "hours": "hours",
