gen speed and timer have min max All gens have failure number translation english pass

--- a/fbw-a32nx/src/systems/instruments/src/EFB/Localization/en.json
+++ b/fbw-a32nx/src/systems/instruments/src/EFB/Localization/en.json
@@ -125,30 +125,29 @@
     "Title": "Failures",
     "Generators": {
       "All": "All",
-      "AltitudeAboveSeaMax": "Maximum altitude above sea",
-      "AltitudeAboveSeaMin": "Minimum altitude above sea",
-      "Close": "Close",
+      "AltitudeMax": "Maximum altitude",
+      "AltitudeMin": "Minimum altitude",
       "days": "days",
-      "DelayAfterArming": "Delay after arming",
+      "DelayAfterArmingMax": "Max. delay after arming",
+      "DelayAfterArmingMin": "Min. delay after arming",
+      "Direction": "Direction",
       "Disabled": "Disabled",
       "FailureChancePerTakeOff": "Failure chance per take-off",
       "FailurePerHour": "Failure per hour",
-      "FailuresAssigned": "Failures assigned",
       "FailureSelection": "Failure pool selection",
       "FailureSelectionText": "Select the failures that may be triggered during this scenario",
       "feet": "feet",
       "GenTimer": "Timed Failure",
       "GenTakeOff": "Take-Off",
-      "GenAlt": "Altitude threshold",
+      "GenAlt": "Altitude",
       "GenPerHour": "Chance over time",
-      "GenSpeed": "Speed threshold",
-      "GroundSpeed": "Ground speed",
+      "GenSpeed": "Speed",
       "hour": "hour",
       "hours": "hours",
       "knots": "knots",
       "LowSpeedChance": "Low Speed chance",
-      "MaxAltAboveRunway": "Max altitude above runway",
-      "MaximumSpeed": "Max speed",
+      "MaxHeightAboveRunway": "Max height above runway",
+      "MaximumSpeed": "Max. speed",
       "MaxSimultaneous": "Max number of simultaneous failures",
       "MeanTimeToFailure": "Mean Time To Failure",
       "MedSpeedChance": "Medium Speed chance",
@@ -157,6 +156,7 @@
       "months": "months",
       "NewSetting": "New Setting",
       "None": "None",
+      "NumberOfFailures": "Number of failures:",
       "Off": "Off",
       "Once": "Once",
       "Rearming": "Rearming",
