fix : take off rearm on most gens fix : per hour setting index incorrects fix: wrong setting of failure numbers in most gens changes x and bin buttons color

--- a/fbw-a32nx/src/systems/instruments/src/EFB/Localization/en.json
+++ b/fbw-a32nx/src/systems/instruments/src/EFB/Localization/en.json
@@ -128,8 +128,8 @@
       "AltitudeMax": "Maximum altitude",
       "AltitudeMin": "Minimum altitude",
       "days": "days",
-      "DelayAfterArmingMax": "Max. delay after arming",
-      "DelayAfterArmingMin": "Min. delay after arming",
+      "DelayAfterArmingMax": "Maximum delay after arming",
+      "DelayAfterArmingMin": "Minimum delay after arming",
       "Direction": "Direction",
       "Disabled": "Disabled",
       "FailureChancePerTakeOff": "Failure chance per take-off",
@@ -146,9 +146,9 @@
       "hours": "hours",
       "knots": "knots",
       "LowSpeedChance": "Low Speed chance",
-      "MaxHeightAboveRunway": "Max height above runway",
-      "MaximumSpeed": "Max. speed",
-      "MaxSimultaneous": "Max number of simultaneous failures",
+      "MaxHeightAboveRunway": "Maximum height above runway",
+      "MaximumSpeed": "Maximum speed",
+      "MaxSimultaneous": "Maximum number of simultaneous failures",
       "MeanTimeToFailure": "Mean Time To Failure",
       "MedSpeedChance": "Medium Speed chance",
       "MinimumSpeed": "Minimum speed",
