--- a/fbw-a32nx/src/systems/instruments/src/EFB/Localization/en.json
+++ b/fbw-a32nx/src/systems/instruments/src/EFB/Localization/en.json
@@ -124,7 +124,7 @@
     "Search": "Search",
     "Title": "Failures",
     "Generators": {
-      "All": "All",
+      "Acceleration": "Acceleration",
       "AltitudeMax": "Maximum altitude",
       "AltitudeMin": "Minimum altitude",
       "days": "days",
@@ -154,9 +154,8 @@
       "MinimumSpeed": "Minimum speed",
       "minutes": "minutes",
       "months": "months",
-      "NewSetting": "New Setting",
       "None": "None",
-      "NumberOfFailures": "Number of failures:",
+      "NumberOfFailures": "Number of failures",
       "Off": "Off",
       "Once": "Once",
       "Rearming": "Rearming",
