--- a/fbw-a32nx/src/systems/instruments/src/EFB/Localization/fr.json
+++ b/fbw-a32nx/src/systems/instruments/src/EFB/Localization/fr.json
@@ -124,47 +124,44 @@
     "Search": "Rechercher",
     "Title": "Pannes",
     "Generators": {
-      "Add": "Ajouter",
-      "All": "Tous",
-      "AltitudeAboveSea": "Altitude au dessus de la mer",
-      "Close": "Fermer",
+      "Acceleration": "Accélération",
+      "AltitudeMax": "Altitude maximale",
+      "AltitudeMin": "Altitude minimale",
       "days": "jours",
-      "DelayAfterArming": "Delai avant réarmement",
+      "DelayAfterArmingMax": "Delai maximal après armement",
+      "DelayAfterArmingMin": "Delai minimal avant armement",
+      "Direction": "Direction",
       "Disabled": "Désactivé",
-      "FailureChancePerTakeOff": "Chance de panne au décollage",
-      "FailurePerHour": "Panne par heure",
-      "FailuresAssigned": "Pannes assignées",
-      "FailureSelection": "Selection du jeu de pannes",
-      "FailureSelectionText": "Selectionnez les pannes pouvant être activées lors de ce scénario",
+      "FailureChancePerTakeOff": "Probabilité par décollage",
+      "FailurePerHour": "Nombre de panne par heure",
+      "FailureSelection": "Choix des pannes possibles",
+      "FailureSelectionText": "Selectionnez les pannes possibles lors de ce scénario",
       "feet": "pieds",
       "GenTimer": "Panne temporisée",
       "GenTakeOff": "Décollage",
-      "GenAltClimb": "Seuil d'altitude (montée)",
-      "GenAltDesc": "Seuil d'altitude (descente)",
-      "GenPerHour": "Chance temporelle",
-      "GenSpeedAccel": "Seuil de Vitesse (accélération)",
-      "GenSpeedDecel": "Seuil de Vitesse (décélération)",
-      "GroundSpeed": "Vitesse au sol",
+      "GenAlt": "Altitude",
+      "GenPerHour": "Probabilité temporelle",
+      "GenSpeed": "Vitesse",
       "hour": "heure",
       "hours": "heures",
       "knots": "noeuds",
-      "LowSpeedChance": "Chance à basse vitesse",
-      "MaxAltAboveRunway": "Altitude max au dessus de la piste",
-      "MaximumSpeed": "Vitesse max",
+      "LowSpeedChance": "Probabilité basse vitesse",
+      "MaxHeightAboveRunway": "Hauteur maximum au dessus de la piste",
+      "MaximumSpeed": "Vitesse maximale",
       "MaxSimultaneous": "Nombre maximum de pannes simultanées",
       "MeanTimeToFailure": "Temps moyen avant panne",
-      "MedSpeedChance": "Chance à vitesse moyenne",
-      "MinimumSpeed": "Vitesse mini",
+      "MedSpeedChance": "Probabilité à vitesse moyenne",
+      "MinimumSpeed": "Vitesse minimale",
       "minutes": "minutes",
       "months": "mois",
-      "NewSetting": "Nouvelle valeur",
       "None": "Aucun",
-      "Off": "Off",
+      "NumberOfFailures": "Nombre de pannes",
+      "Off": "Eteint",
       "Once": "Unique",
       "Rearming": "Réarmement",
       "Repeat": "Répété",
       "seconds": "secondes",
-      "Select": "Selectionne le générateur de panne",
+      "Select": "Choisissez un générateur de pannes",
       "SpeedTransLowMed": "Vitesse de transition lent-moyen",
       "TakeOff": "Décollage",
       "Title": "Générateur de panne",
