fix(efb): localisation diff and deboarding full bugs

--- a/fbw-a32nx/src/systems/instruments/src/EFB/Localization/en.json
+++ b/fbw-a32nx/src/systems/instruments/src/EFB/Localization/en.json
@@ -168,9 +168,7 @@
         "MaxGW": "Maximum GW",
         "MaxGWCG": "Maximum GW CG",
         "MaxPassengers": "Maximum Passengers",
-        "MaxGW": "Maximum GW",
         "MaxZFW": "Maximum ZFW",
-        "MaxGWCG": "Maximum GW CG",
         "MaxZFWCG": "Maximum ZFWCG",
         "PerPaxBagWeight": "Per Passenger Bag Weight",
         "PerPaxWeight": "Per Passenger Weight",
@@ -179,9 +177,7 @@
       },
       "Title": "Payload",
       "ZFW": "ZFW",
-      "GW": "GW",
-      "ZFWCG": "ZFWCG",
-      "GWCG": "GW CG"
+      "ZFWCG": "ZFWCG"
     },
     "Pushback": {
       "Title": "Pushback"
