revert removed translation "All"

--- a/fbw-a32nx/src/systems/instruments/src/EFB/Localization/en.json
+++ b/fbw-a32nx/src/systems/instruments/src/EFB/Localization/en.json
@@ -125,6 +125,7 @@
     "Title": "Failures",
     "Generators": {
       "Acceleration": "Acceleration",
+      "All": "All",
       "AltitudeMax": "Maximum altitude",
       "AltitudeMin": "Minimum altitude",
       "days": "days",
