--- a/fbw-a32nx/src/systems/instruments/src/EFB/Localization/fr.json
+++ b/fbw-a32nx/src/systems/instruments/src/EFB/Localization/fr.json
@@ -125,6 +125,7 @@
     "Title": "Pannes",
     "Generators": {
       "Acceleration": "Accélération",
+      "All": "Tout",
       "AltitudeMax": "Altitude maximale",
       "AltitudeMin": "Altitude minimale",
       "days": "jours",
