Major rehaul of settings visual title of settings changed Rearming -> arming Arming is now a standard setting Altitude and speed conditions instead of direction Arming mode translated dynamicaly fix Translation of minimal minimal timing Added display for chance during climb

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -126,12 +126,15 @@
     "Generators": {
       "Acceleration": "Acceleration",
       "All": "All",
+      "AllFailures": "All failures",
+      "AltitudeCondition": "Altitude condition",
       "AltitudeMax": "Maximum altitude",
       "AltitudeMin": "Minimum altitude",
+      "Arming": "Arming",
+      "ClimbingChance": "Chance during climb",
       "days": "days",
       "DelayAfterArmingMax": "Maximum delay after arming",
       "DelayAfterArmingMin": "Minimum delay after arming",
-      "Direction": "Direction",
       "Disabled": "Disabled",
       "FailureChancePerTakeOff": "Failure chance per take-off",
       "FailurePerHour": "Failure per hour",
@@ -143,26 +146,27 @@
       "GenAlt": "Altitude",
       "GenPerHour": "Chance over time",
       "GenSpeed": "Speed",
-      "hour": "hour",
       "hours": "hours",
       "knots": "knots",
-      "LowSpeedChance": "Low Speed chance",
+      "LowSpeedChance": "Chance at low Speed",
       "MaxHeightAboveRunway": "Maximum height above runway",
       "MaximumSpeed": "Maximum speed",
       "MaxSimultaneous": "Maximum number of simultaneous failures",
       "MeanTimeToFailure": "Mean Time To Failure",
-      "MedSpeedChance": "Medium Speed chance",
+      "MedSpeedChance": "Chance at medium Speed",
       "MinimumSpeed": "Minimum speed",
       "minutes": "minutes",
       "months": "months",
       "None": "None",
       "NumberOfFailures": "Number of failures",
+      "NoFailure": "No failure",
       "Off": "Off",
       "Once": "Once",
-      "Rearming": "Rearming",
       "Repeat": "Repeat",
       "seconds": "seconds",
       "Select": "Select Failure Generator",
+      "SettingsTitle": "Triggering conditions",
+      "SpeedCondition": "Speed condition",
       "SpeedTransLowMed": "Speed transition low-med",
       "TakeOff": "Take-Off",
       "Title": "Failure Generator",
