--- a/fbw-a32nx/src/localization/flypad/fr.json
+++ b/fbw-a32nx/src/localization/flypad/fr.json
@@ -126,12 +126,15 @@
     "Generators": {
       "Acceleration": "Accélération",
       "All": "Tout",
+      "AllFailures": "Toutes les pannes",
+      "AltitudeCondition": "Condition d'altitude",
       "AltitudeMax": "Altitude maximale",
       "AltitudeMin": "Altitude minimale",
+      "Arming": "Armement",
+      "ClimbingChance": "Probabilité en montée",
       "days": "jours",
       "DelayAfterArmingMax": "Delai maximal après armement",
-      "DelayAfterArmingMin": "Delai minimal avant armement",
-      "Direction": "Direction",
+      "DelayAfterArmingMin": "Delai minimal après armement",
       "Disabled": "Désactivé",
       "FailureChancePerTakeOff": "Probabilité par décollage",
       "FailurePerHour": "Nombre de panne par heure",
@@ -143,7 +146,6 @@
       "GenAlt": "Altitude",
       "GenPerHour": "Probabilité temporelle",
       "GenSpeed": "Vitesse",
-      "hour": "heure",
       "hours": "heures",
       "knots": "noeuds",
       "LowSpeedChance": "Probabilité basse vitesse",
@@ -157,12 +159,14 @@
       "months": "mois",
       "None": "Aucun",
       "NumberOfFailures": "Nombre de pannes",
+      "NoFailure": "Aucune panne",
       "Off": "Eteint",
       "Once": "Unique",
-      "Rearming": "Réarmement",
       "Repeat": "Répété",
       "seconds": "secondes",
       "Select": "Choisissez un générateur de pannes",
+      "SettingsTitle": "Conditions d'activation",
+      "SpeedCondition": "Condition de vitesse",
       "SpeedTransLowMed": "Vitesse de transition lent-moyen",
       "TakeOff": "Décollage",
       "Title": "Générateur de panne",
