Sub section in take-off changed icons of speed condition chance replaced by probability

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -131,12 +131,12 @@
       "AltitudeMax": "Maximum altitude",
       "AltitudeMin": "Minimum altitude",
       "Arming": "Arming",
-      "ClimbingChance": "Chance during climb",
+      "ClimbingChance": "Probability during climb",
       "days": "days",
       "DelayAfterArmingMax": "Maximum delay after arming",
       "DelayAfterArmingMin": "Minimum delay after arming",
       "Disabled": "Disabled",
-      "FailureChancePerTakeOff": "Failure chance per take-off",
+      "FailureChancePerTakeOff": "Failure probability per take-off",
       "FailurePerHour": "Failure per hour",
       "FailureSelection": "Failure pool selection",
       "FailureSelectionText": "Select the failures that may be triggered during this scenario",
@@ -144,16 +144,16 @@
       "GenTimer": "Timed Failure",
       "GenTakeOff": "Take-Off",
       "GenAlt": "Altitude",
-      "GenPerHour": "Chance over time",
+      "GenPerHour": "Probability over time",
       "GenSpeed": "Speed",
       "hours": "hours",
       "knots": "knots",
-      "LowSpeedChance": "Chance at low Speed",
+      "LowSpeedChance": "Probability at low Speed",
       "MaxHeightAboveRunway": "Maximum height above runway",
       "MaximumSpeed": "Maximum speed",
       "MaxSimultaneous": "Maximum number of simultaneous failures",
       "MeanTimeToFailure": "Mean Time To Failure",
-      "MedSpeedChance": "Chance at medium Speed",
+      "MedSpeedChance": "Probability at medium Speed",
       "MinimumSpeed": "Minimum speed",
       "minutes": "minutes",
       "months": "months",
@@ -168,6 +168,7 @@
       "SettingsTitle": "Triggering conditions",
       "SpeedCondition": "Speed condition",
       "SpeedTransLowMed": "Speed transition low-med",
+      "SplitOverPhases": "Split over these phases",
       "TakeOff": "Take-Off",
       "Title": "Failure Generator",
       "years": "years"
