--- a/fbw-a32nx/src/localization/flypad/fr.json
+++ b/fbw-a32nx/src/localization/flypad/fr.json
@@ -168,6 +168,7 @@
       "SettingsTitle": "Conditions d'activation",
       "SpeedCondition": "Condition de vitesse",
       "SpeedTransLowMed": "Vitesse de transition lent-moyen",
+      "SplitOverPhases": "Répartis dans ces phases",
       "TakeOff": "Décollage",
       "Title": "Générateur de panne",
       "years": "années"
