add default dropdown selection info popup to explain icons Replace All Failures by All Systems Replaced Failure probability /h by average number of failure /h

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -126,7 +126,7 @@
     "Generators": {
       "Acceleration": "Acceleration",
       "All": "All",
-      "AllFailures": "All failures",
+      "AllSystems": "All Systems",
       "AltitudeCondition": "Altitude condition",
       "AltitudeMax": "Maximum altitude",
       "AltitudeMin": "Minimum altitude",
@@ -137,7 +137,7 @@
       "DelayAfterArmingMin": "Minimum delay after arming",
       "Disabled": "Disabled",
       "FailureChancePerTakeOff": "Failure probability per take-off",
-      "FailurePerHour": "Failure per hour",
+      "FailurePerHour": "Average number of failure per hour",
       "FailureSelection": "Failure pool selection",
       "FailureSelectionText": "Select the failures that may be triggered during this scenario",
       "feet": "feet",
@@ -147,10 +147,10 @@
       "GenPerHour": "Probability over time",
       "GenSpeed": "Speed",
       "hours": "hours",
+      "InfoTitle": "Information and legends",
       "knots": "knots",
       "LowSpeedChance": "Probability at low Speed",
       "MaxHeightAboveRunway": "Maximum height above runway",
-      "MaximumSpeed": "Maximum speed",
       "MaxSimultaneous": "Maximum number of simultaneous failures",
       "MeanTimeToFailure": "Mean Time To Failure",
       "MedSpeedChance": "Probability at medium Speed",
@@ -164,14 +164,28 @@
       "Once": "Once",
       "Repeat": "Repeat",
       "seconds": "seconds",
-      "Select": "Select Failure Generator",
+      "GeneratorToAdd": "Failure Generator to add",
+      "SelectInList": "Select a Generator",
       "SettingsTitle": "Triggering conditions",
       "SpeedCondition": "Speed condition",
       "SpeedTransLowMed": "Speed transition low-med",
+      "SpeedTransMedHigh": "Speed transition med-high",
       "SplitOverPhases": "Split over these phases",
       "TakeOff": "Take-Off",
       "Title": "Failure Generator",
-      "years": "years"
+      "years": "years",
+      "Legends": {
+        "Airplane": "The failure generator will trigger the failures only once after each take off.",
+        "ArrowUpRight": "The failure will happen when speed or altitude is increasing.",
+        "ArrowDownRight": "The failure will happen when speed or altitude is decreasing.",
+        "ExclamationDiamond": "The page to select which failures can happen when the generator triggers.",
+        "Info": "A failure generator is a feature that will trigger system failures automatically depending on the rules of the type of generator. There are several types of generator that have different logics to trigger a failure. Each generator have their own settings on their triggering conditions, can be armed individually and can trigger a specific set of failures. See FBW documentation for further details.",
+        "Repeat": "The failure generator is armed and will repeatingly trigger the failures when conditions are met.",
+        "Repeat1": "The failure generator is armed and will trigger the failures only once and then disarm.",
+        "Sliders2Vertical": "The page for the settings of each failure generator.",
+        "Trash": "Removes the failure generator and it's settings.",
+        "ToggleOff": "The failure generator is not armed and will not trigger any failure."
+      }
     }
   },
   "Ground": {
