--- a/fbw-a32nx/src/localization/flypad/fr.json
+++ b/fbw-a32nx/src/localization/flypad/fr.json
@@ -126,7 +126,7 @@
     "Generators": {
       "Acceleration": "Accélération",
       "All": "Tout",
-      "AllFailures": "Toutes les pannes",
+      "AllSystems": "Tous les systèmes",
       "AltitudeCondition": "Condition d'altitude",
       "AltitudeMax": "Altitude maximale",
       "AltitudeMin": "Altitude minimale",
@@ -137,7 +137,7 @@
       "DelayAfterArmingMin": "Delai minimal après armement",
       "Disabled": "Désactivé",
       "FailureChancePerTakeOff": "Probabilité par décollage",
-      "FailurePerHour": "Nombre de panne par heure",
+      "FailurePerHour": "Nombre moyen de panne par heure",
       "FailureSelection": "Choix des pannes possibles",
       "FailureSelectionText": "Selectionnez les pannes possibles lors de ce scénario",
       "feet": "pieds",
@@ -147,10 +147,10 @@
       "GenPerHour": "Probabilité temporelle",
       "GenSpeed": "Vitesse",
       "hours": "heures",
+      "InfoTitle": "Informations et legendes",
       "knots": "noeuds",
       "LowSpeedChance": "Probabilité basse vitesse",
       "MaxHeightAboveRunway": "Hauteur maximum au dessus de la piste",
-      "MaximumSpeed": "Vitesse maximale",
       "MaxSimultaneous": "Nombre maximum de pannes simultanées",
       "MeanTimeToFailure": "Temps moyen avant panne",
       "MedSpeedChance": "Probabilité à vitesse moyenne",
@@ -164,14 +164,28 @@
       "Once": "Unique",
       "Repeat": "Répété",
       "seconds": "secondes",
-      "Select": "Choisissez un générateur de pannes",
+      "GeneratorToAdd": "Générateur de pannes à ajouter",
+      "SelectInList": "Selectionnez un générateur",
       "SettingsTitle": "Conditions d'activation",
       "SpeedCondition": "Condition de vitesse",
       "SpeedTransLowMed": "Vitesse de transition lent-moyen",
+      "SpeedTransMedHigh": "Vitesse de transition moyen-rapide",
       "SplitOverPhases": "Répartis dans ces phases",
       "TakeOff": "Décollage",
       "Title": "Générateur de panne",
-      "years": "années"
+      "years": "années",
+      "Legends": {
+        "Airplane": "Le générateur va déclencher des pannes une seule fois après chaque décollage.",
+        "ArrowUpRight": "La panne va se décelncher lorsque la vitesse ou l'altitude augmente.",
+        "ArrowDownRight": "a panne va se décelncher lorsque la vitesse ou l'altitude diminue.",
+        "ExclamationDiamond": "La page où selectionner les pannes qui peuvent survenir lorsque le générateur se déclenche.",
+        "Info": "Un générateur de panne est une fonction qui active des pannes de systèmes automatiquement en fonction des règles du type du générateur. Il existe plusieurs types de générateur possédant différentes logiques de déclenchement des pannes. Chaque générateur possède son propre jeu de réglages pour déclencher les pannes, peut être armé individuellement et déclencher un jeu de pannes spécifique. Voir la documentation FBW documentation pour plus de détails.",
+        "Repeat": "Le générateur de panne est armé et va déclencher de manière répétée des pannes quand ses conditions sont remplies.",
+        "Repeat1": "Le générateur de panne est armé et va déclencher des pannes une seule fois puis se désarmer.",
+        "Sliders2Vertical": "La page pour les réglages de chaque générateur de panne.",
+        "Trash": "Supprime le générateur de panne et ses réglages.",
+        "ToggleOff": "Le générateur de panne n'est pas armé et ne déclenchera aucune panne."
+      }
     }
   },
   "Ground": {
