--- a/fbw-a32nx/src/localization/flypad/fr.json
+++ b/fbw-a32nx/src/localization/flypad/fr.json
@@ -147,7 +147,6 @@
       "GenPerHour": "Probabilité temporelle",
       "GenSpeed": "Vitesse",
       "hours": "heures",
-      "InfoTitle": "Informations et legendes",
       "knots": "noeuds",
       "LowSpeedChance": "Probabilité basse vitesse",
       "MaxHeightAboveRunway": "Hauteur maximum au dessus de la piste",
@@ -180,11 +179,12 @@
         "ArrowDownRight": "a panne va se décelncher lorsque la vitesse ou l'altitude diminue.",
         "ExclamationDiamond": "La page où selectionner les pannes qui peuvent survenir lorsque le générateur se déclenche.",
         "Info": "Pour plus d'informations, consultez: docs.flybywiresim.com/a32nx-failures",
+        "InfoTitle": "Informations et legende",
         "Repeat": "Le générateur de panne est armé et va déclencher de manière répétée des pannes quand ses conditions sont remplies.",
         "Repeat1": "Le générateur de panne est armé et va déclencher des pannes une seule fois puis se désarmer.",
         "Sliders2Vertical": "La page pour les réglages de chaque générateur de panne.",
-        "Trash": "Supprime le générateur de panne et ses réglages.",
-        "ToggleOff": "Le générateur de panne n'est pas armé et ne déclenchera aucune panne."
+        "ToggleOff": "Le générateur de panne n'est pas armé et ne déclenchera aucune panne.",
+        "Trash": "Supprime le générateur de panne et ses réglages."
       }
     }
   },
