Max simult failure moved to each gen's settings Creation setting index Constants for easier maintenance Altitude gen settings scrollable Removed max simult failure from main mage New function to set number of failure and max failure at the same time New way of checking max failure

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -150,10 +150,11 @@
       "knots": "knots",
       "LowSpeedChance": "Probability at low Speed",
       "MaxHeightAboveRunway": "Maximum height above runway",
+      "MaximumGroundSpeed": "Maximum ground speed",
       "MaxSimultaneous": "Maximum number of simultaneous failures",
       "MeanTimeToFailure": "Mean Time To Failure",
       "MedSpeedChance": "Probability at medium Speed",
-      "MinimumSpeed": "Minimum speed",
+      "MinimumGroundSpeed": "Minimum ground speed",
       "minutes": "minutes",
       "months": "months",
       "None": "None",
