--- a/fbw-a32nx/src/localization/flypad/fr.json
+++ b/fbw-a32nx/src/localization/flypad/fr.json
@@ -150,10 +150,11 @@
       "knots": "noeuds",
       "LowSpeedChance": "Probabilité basse vitesse",
       "MaxHeightAboveRunway": "Hauteur maximum au dessus de la piste",
+      "MaximumGroundSpeed": "Vitesse au sol maximale",
       "MaxSimultaneous": "Nombre maximum de pannes simultanées",
       "MeanTimeToFailure": "Temps moyen avant panne",
       "MedSpeedChance": "Probabilité à vitesse moyenne",
-      "MinimumSpeed": "Vitesse minimale",
+      "MinimumGroundSpeed": "Vitesse au sol minimale",
       "minutes": "minutes",
       "months": "mois",
       "None": "Aucun",
