Minor fixes and tweaks. NEW LOC KEY

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -597,7 +597,8 @@
         "Unlink": "Unlink Account",
         "SubscriptionStatus": {
           "None": "None",
-          "Unlimited": "Navigraph Unlimited"
+          "Unlimited": "Navigraph Unlimited",
+          "Unknown": "Unknown"
         },
         "LoginPage": {
           "Title": "Navigraph Account Login"
