feat: selectable auto call outs

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -489,9 +489,30 @@
       "PaxSigns": "PAX Signs",
       "RmpVhfSpacing": "RMP VHF Spacing",
       "Satcom": "Satcom",
+      "Select": "Select",
       "ThrustReductionHeight": "Thrust Reduction Height (ft)",
       "Title": "Aircraft Options / Pin Programs",
       "WeightUnit": "Weight Unit"
+    },
+    "AutomaticCallOuts": {
+      "Title": "Automatic Call Outs",
+      "TwoThousandFiveHundred": "Two Thousand Five Hundred",
+      "TwentyFiveHundred": "Twenty Five Hundred",
+      "TwoThousand": "Two Thousand",
+      "OneThousand": "One Thousand",
+      "FiveHundred": "Five Hundred",
+      "FourHundred": "Four Hundred",
+      "ThreeHundred": "Three Hundred",
+      "TwoHundred": "Two Hundred",
+      "OneHundred": "One Hundred",
+      "Fifty": "Fifty",
+      "Forty": "Forty",
+      "Thirty": "Thirty",
+      "Twenty": "Twenty",
+      "Ten": "Ten",
+      "Five": "Five",
+      "ResetStandardConfig": "Reset To Standard Configuration",
+      "Reset": "Reset"
     },
     "AtsuAoc": {
       "AtisAtcSource": "ATIS/ATC Source",
