fixes to make it work

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -491,7 +491,8 @@
       "Satcom": "Satcom",
       "ThrustReductionHeight": "Thrust Reduction Height (ft)",
       "Title": "Aircraft Options / Pin Programs",
-      "WeightUnit": "Weight Unit"
+      "WeightUnit": "Weight Unit",
+      "PostIt": "PostIt"
     },
     "AtsuAoc": {
       "AtisAtcSource": "ATIS/ATC Source",
