feat(efb): add disabled ui for 500 glide

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -496,6 +496,7 @@
     },
     "AutomaticCallOuts": {
       "Title": "Automatic Call Outs",
+      "FiveHundredGlide": "Inhibited When Glideslope Captured",
       "ResetStandardConfig": "Reset To Standard Configuration",
       "Reset": "Reset"
     },
