feat: selectable auto call outs (#8167)
* feat: selectable auto call outs

* feat: hook up twenty five hundred

* fix: rename setting per feedback

* fix: callouts not localisable per feedback

* feat: 500 glide inhibit pin

* feat(efb): disabled state for toggle

* feat(efb): add disabled ui for 500 glide

* feat: 2000 callout

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -489,9 +489,16 @@
       "PaxSigns": "PAX Signs",
       "RmpVhfSpacing": "RMP VHF Spacing",
       "Satcom": "Satcom",
+      "Select": "Select",
       "ThrustReductionHeight": "Thrust Reduction Height (ft)",
       "Title": "Aircraft Options / Pin Programs",
       "WeightUnit": "Weight Unit"
+    },
+    "AutomaticCallOuts": {
+      "Title": "Automatic Call Outs",
+      "FiveHundredGlide": "Inhibited When Glideslope Captured",
+      "ResetStandardConfig": "Reset To Standard Configuration",
+      "Reset": "Reset"
     },
     "AtsuAoc": {
       "AtisAtcSource": "ATIS/ATC Source",
