GSX Menu Disable (WIP) - Pressing payload play now programatically enables GSX Boarding - TODO fix boarding started variable

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -158,6 +158,9 @@
       "DeboardConfirmationTitle": "Deboard all Passengers?",
       "EstimatedDurationUnit": "minutes",
       "GSXPayloadSyncEnabled": "GSX Payload Sync Enabled",
+      "GsxCrewBoardConfirmationTitle": "Would you like to board crew?",
+      "GsxCrewBoardConfirm": "Yes",
+      "GsxCrewBoardCancel": "No",
       "GW": "GW",
       "GWCG": "GW CG",
       "LoadingTime": "Loading Time",
