TimedFailure in TakeOff mode starts when rolling ToolTip for mode icon renamed ArmedIndex into ArmedModeIndex Created a new mode icon highlight when ready to trigger Added check that altitudeCondition or mode Changed to reset arming. New and clearer internal condition and arming for altitude generator Added check that speedCondition or mode Changed to reset arming. New and clearer internal condition and arming for speed generator

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -172,6 +172,14 @@
       "SpeedTransMedHigh": "Speed transition med-high",
       "SplitOverPhases": "Split over these phases",
       "TakeOff": "Take-Off",
+      "ToolTipFailureList": "Opens the page to select failures that can be triggered by this failure generator",
+      "ToolTipGeneratorSettings": "Opens the page for the settings of this failure generator",
+      "ToolTipOff": "No failure will occur",
+      "ToolTipReady": "READY",
+      "ToolTipStandby": "STANDBY",
+      "ToolTipRepeat": "Failures will occur every time the conditions are met",
+      "ToolTipRepeat1": "Failures will occur only once, when the conditions are met",
+      "ToolTipTakeOff": "Failures will occur only once per take-off, when the conditions are met",
       "Title": "Failure Generator",
       "years": "years",
       "Legends": {
